--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -5,6 +5,9 @@
     <!--meta http-equiv="X-UA-Compatible" content="IE=edge"-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/c.css' ) }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <!--script type="text/javascript" src="https://cdn.jsdelivr.net/npm/three@0.119.1/build/three.js"></!--script>
+    <script src="https://cdn.jsdelivr.net/npm/@loaders.gl/gltf@1.0.1/dist/bundle.umd.js"></script-->
     <!--link rel="stylesheet" href="c.css"-->
     <title>Document</title>
 </head>
@@ -22,11 +25,6 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/micropartesComponentes.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/animaciones.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/edicionObjetos.js') }}"></script>
-<!--script src="/bloque.js"></!--script>
-<script src="/arranque.js"></script>
-<script src="/modal.js"></script>
-<script src="/prueba.js"></script>
-<script src="/micropartesComponentes.js"></script>
-<script src="/animaciones.js"></script>
-<script-- src="/edicionObjetos.js"></script-->
+<script type="text/javascript" src="{{ url_for('static', filename='js/dragAndDrop.js') }}"></script>
+
 </html>
