--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body onload="arranque()">
         <div id="padre" style="position:relative;">
-            <div id="porAhora" style="position: absolute;"></div><!--para usar z-index las cordenadas deben tener position absolute-->
+            <div id="porAhora" style="position: absolute; width: 100%;"></div><!--para usar z-index las cordenadas deben tener position absolute-->
             <div id="root" style="z-index: 1000; position: absolute; top: 0; left: 0; right: 0; margin: 0 auto;"></div>  
         </div>
 </body>
