--- a/api/static/css/c.css
+++ b/api/static/css/c.css
@@ -1,5 +1,5 @@
 body{
-    background: rgba(0, 0, 0, 0.322);
+    background-image: url('https://res.cloudinary.com/dplncudbq/image/upload/v1670631081/mias/fondoConta_wlzfws.png');
 }
 
 .inputColor{
@@ -123,9 +123,10 @@ h3, h4{
     justify-content: center;
 }
 
-.centrarObjeto{
-    text-align: center;
+.espacioEquilatero{
+    justify-content: space-between;
 }
+
 
 /**text area*/
 textarea{
