--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/c.css' ) }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <!--script type="text/javascript" src="https://cdn.jsdelivr.net/npm/three@0.119.1/build/three.js"></!--script>
-    <script src="https://cdn.jsdelivr.net/npm/@loaders.gl/gltf@1.0.1/dist/bundle.umd.js"></script-->
-    <!--link rel="stylesheet" href="c.css"-->
+    <link id="linkLetra" href='https://fonts.googleapis.com/css2?family=Dancing+Script' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body onload="arranque()">
