--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -11,10 +11,15 @@
 </head>
 <body onload="arranque()">
         <!--div id="padre" style="position:relative;"--> 
-        <div style='display: flex; justify-content: center; text-align: center; '>
-            <div id="porAhora" style="position: absolute; width: 100%;"></div><!--para usar z-index las cordenadas deben tener position absolute-->
-            <div id="root" style="z-index: 1000; position: absolute; top: 0; left: 0; right: 0; margin: 0 auto;"></div>  
-        </div>
+        <!--div-- style='display: flex; justify-content: center; text-align: center; '-->
+            
+            
+                <div id="editor"></div>
+                
+                <div id="porAhora" style="background: white; width: 100%;"></div><!--para usar z-index las cordenadas deben tener position absolute-->
+                <div id="root" style="z-index: 1000; position: absolute; top: 0; left: 0; right: 0; margin: 0 auto;"></div>  
+            
+        <!--div-->
         <!--/div-->
 </body>
 
